Removed redundancies, partial functionality